<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="capture_screen_title">Capture</string>
    <string name="capture_tag_screen_title">Add tag</string>
    <string name="expected_tally">Expected tally</string>
    <string name="asset_no_tag_challenge">Are you sure you want to proceed?</string>
    <string name="asset_no_tag_explanation">Confirming this asset with no associated tags will impact traceability for this asset until corrected.</string>
    <string name="dont_show_again">Don\'t show message again</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="pound_sign">#</string>
    <string name="product_description">Product description</string>
    <string name="tally">Tally</string>
    <string name="tags">Tags</string>
    <string name="consumption_status">Status</string>
    <string name="heat_no_format">Heat no. %1$s</string>
    <string name="mill_work_no_format">Mill work no. %1$s</string>
    <string name="pipe_no_format">Pipe no. %1$s</string>
    <string name="submission_awaiting_sync_to_the_master_file">Submission awaiting sync.</string>
    <string name="offline_sync_description">This submission has been stored locally on this device. We’ll automatically sync it once you’re back online.</string>
    <string name="okay">Okay</string>
    <string name="total_tally">Total tally</string>
    <string name="total_consumed">Total consumed</string>
    <string name="scan_time">Scan time</string>
    <string name="consumption_reject_title">Explain why you’re rejecting this asset. (Pipe no. %1$s)</string>
    <string name="consume_to_reject_title">Do you want to change this asset’s status to reject? (Pipe no. %1$s)</string>
    <string name="reject_to_consume_title">Do you want to change this asset’s status to consume? (Pipe no. %1$s)</string>
    <string name="consume">Consume</string>
    <string name="reject">Reject</string>
    <string name="reason">Reason</string>
    <string name="comment">Comment</string>
    <string name="quick_reject_info">Assets will be marked reject</string>
    <string name="yes_consume">Yes, Consume</string>
    <string name="tap_bottom_left_to_scan">Tap the bottom-left button to start scanning assets.</string>
    <string name="no_special_instructions_placeholder">No special instructions for this order.</string>
    <string name="already_consumed_description">Asset already captured as consume</string>
    <string name="already_rejected_description">Asset already captured as reject</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">Ok</string>
    <string name="attachments">Attachments</string>
    <string name="attach">Attach</string>
    <string name="required">*Required</string>
    <string name="asset_from_wrong_project_title">Asset from wrong project</string>
    <string name="asset_from_wrong_project_description">This asset is associated with the %1$s project. Please try another asset that is associated with the %2$s project.</string>
    <string name="contract_no_format">Contract no. %1$s</string>
    <string name="shipment_no_format">Shipment no. %1$s</string>
    <string name="condition_format">Condition: %1$s</string>
    <string name="rack_location_format">Rack Location: %1$s</string>
    <string name="delete_icon_description">Delete Icon</string>
    <string name="edit_icon_description">Edit Icon</string>
    <string name="warning_icon_description">Warning Icon</string>
    <string name="calendar_icon_description">Calendar Icon</string>
    <string name="location_pin_icon_description">Location Pin Icon</string>
    <string name="location_icon_description">Location Icon</string>
    <string name="not_started">Not Started</string>
    <string name="in_progress">In Progress</string>
    <string name="pending">Pending</string>
    <string name="in_review">In Review</string>
    <string name="completed">Completed</string>
    <string name="start_transferring">Start transferring!</string>
    <string name="message_new_transfer">Tap the bottom-right button to create a new transfer.</string>
    <string name="transfer_location">Transfer location</string>
    <string name="submitted">Submitted</string>
    <string name="submit">Submit</string>
    <string name="logo_sct">SC Trace logo</string>
    <string name="mill_work_no">Mill work no. </string>
    <string name="status">Status</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="well_section">Well section</string>
    <string name="auto_scan_off">Auto scan off</string>
    <string name="auto_scan_on">Auto scan on</string>
    <string name="auto_scan_icon_description">Toggleable Button for Auto Scan Mode</string>
    <string name="detecting">DETECTING</string>
    <string name="start">Start</string>
    <string name="continue_string">Continue</string>
    <string name="consumed">Consumed</string>
    <string name="rejected">Rejected</string>
    <string name="scanned_summary">Scanned summary</string>
    <string name="session_consumed">Session consumed</string>
    <string name="session_rejected">Session rejected</string>
    <string name="session_running_length">Session running length</string>
    <string name="scan_assets">Scan assets</string>
    <string name="scan_assets_icon_description">Scan assets icon</string>
    <string name="search">Search</string>
    <string name="dropdown_chevron_icon_description">Dropdown chevron icon</string>
    <string name="close_icon_description">Close icon</string>
    <string name="search_icon_description">Search icon</string>
    <string name="checkmark_icon_description">Checkmark icon</string>
    <string name="back_button_icon_description">Back Button Icon</string>
    <string name="info_icon_description">Information warning</string>
    <string name="asset_details">Asset details</string>
    <string name="contract_id">Contract ID</string>
    <string name="shipment_no">Shipment no.</string>
    <string name="heat_no">Heat no.</string>
    <string name="pipe_no">Pipe no.</string>
    <string name="condition">Condition</string>
    <string name="length">Length</string>
    <string name="rack_location">Rack location</string>
    <string name="no_of_tags">No. of tags</string>
    <string name="outside_diameter">Outside diameter (OD)</string>
    <string name="weight">Weight</string>
    <string name="grade">Grade</string>
    <string name="end_finish">End finish (EF)</string>
    <string name="commodity">Commodity</string>
    <string name="running_length">Running length</string>
    <string name="task_ad_hoc_actions_text">Ad hoc actions</string>
    <string name="message_no_submit_assets">Some assets in this task haven’t been submitted. Tap the continue button to review and submit them.</string>
    <string name="ad_hoc_scan">Ad hoc scan</string>
    <string name="quick_scan">Quick scan</string>
    <string name="reject_scan">Reject scan</string>
    <string name="inbound_from_mill">Inbound from mill</string>
    <string name="inbound_from_well_site">Inbound from well site</string>
    <string name="inbound_to_well">Inbound to well</string>
    <string name="dispatch">Dispatch</string>
    <string name="ad_hoc_rack_transfer">Ad hoc rack transfer</string>
</resources>
