<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/assets_list_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@color/scgts_white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/consumption_header_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pound_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/consumption_header_product_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_weight="3"
        android:text="@string/product_description"
        app:layout_constraintEnd_toStartOf="@id/consumption_header_tally"
        app:layout_constraintStart_toEndOf="@id/consumption_header_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/consumption_header_tally"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tally"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/consumption_header_product_description"
        app:layout_constraintEnd_toStartOf="@id/consumption_header_status"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/consumption_header_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/consumption_status"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/consumption_header_tally"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        layout="@layout/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
