<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/task_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proximanova_medium"
            android:textColor="@color/slate"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Inbound" />

        <TextView
            android:id="@+id/task_jobId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/proximanova_semibold"
            android:maxLines="1"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/task_status"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_type"
            tools:text="#3072 / 93-7892" />

        <TextView
            android:id="@+id/scan_time_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/proximanova_medium"
            android:text="@string/scan_time"
            android:textColor="@color/slate"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_jobId" />

        <TextView
            android:id="@+id/scan_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/proximanova_regular"
            android:maxLines="1"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/task_expectedTallyValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scan_time_label"
            tools:text="12:34 PM" />

        <TextView
            android:id="@+id/task_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_rect"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/proximanova_medium"
            android:gravity="center"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/pending"
            android:textAllCaps="true"
            android:textColor="@color/dark_blue"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/task_expectedTally"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/proximanova_medium"
            android:text="@string/total_tally"
            android:textColor="@color/slate"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/task_expectedTallyValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_jobId" />

        <TextView
            android:id="@+id/task_expectedTallyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/proximanova_regular"
            android:gravity="end"
            android:maxLines="1"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/scan_time"
            app:layout_constraintTop_toBottomOf="@id/task_expectedTally"
            tools:text="30 JT / 160,800 FT" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
