<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/consumption_views_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="capture_camera_consume, capture_camera_reject" />

    <include
        android:id="@+id/toast_asset_added"
        layout="@layout/toast_asset_added"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/capture_camera_reject"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/capture_camera_consume"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/consumption_button_bg"
        android:backgroundTint="@color/consume_toggle_bg_selector"
        android:fontFamily="@font/proximanova_semibold"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/consume"
        android:textColor="@color/consumption_text_color_selector"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/capture_camera_reject"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/capture_camera_reject"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/consumption_button_bg_inverted"
        android:backgroundTint="@color/reject_toggle_bg_selector"
        android:fontFamily="@font/proximanova_semibold"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/reject"
        android:textColor="@color/consumption_text_color_selector"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/capture_camera_consume"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/capture_camera_quick_reject"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:alpha="0.9"
        android:background="@drawable/semi_cirle_edge_container"
        android:backgroundTint="@color/dark_blue"
        android:drawableStart="@drawable/ic_warning"
        android:fontFamily="@font/proximanova_semibold"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/quick_reject_info"
        android:textColor="@color/consumption_text_color_selector"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scan_issue_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/round_corner_rect"
        android:backgroundTint="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/camera_preview"
        app:layout_constraintStart_toStartOf="@id/camera_preview"
        app:layout_constraintTop_toTopOf="@id/camera_preview">

        <TextView
            android:id="@+id/scan_issue_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/asset_not_found"
            android:textAlignment="center"
            android:textColor="@color/n_900"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scan_issue_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"
            android:textColor="@color/n_900"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scan_issue_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/camera_compose_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/capture_camera_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:behavior_peekHeight="300dp"
            app:layoutDescription="@xml/bottom_sheet_scene"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/capture_bottom_sheet_compose_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
